--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
-  padding: 2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: large;
+}
+
+h1,
+h3 {
+  margin: 0;
+  padding: 0.5rem;
 }
