--- a/src/components/Converter.css
+++ b/src/components/Converter.css
@@ -40,6 +40,7 @@ input {
 }
 
 .resultText {
+  margin: auto;
   font-size: 1.5rem;
   height: 40px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
