--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,16 @@
   font-size: large;
 }
 
+.App-header:hover {
+  background-color: rgb(170, 62, 43);
+}
+
 h1,
 h3 {
   margin: 0;
   padding: 0.5rem;
+}
+
+h3 {
+  margin-bottom: 0.5rem;
 }
